--- a/src/index.css
+++ b/src/index.css
@@ -65,12 +65,13 @@
 
 
 
+
 @layer base {
   * {
-    @apply border-border;
+    
     scrollbar-width: none; 
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground transition-colors duration-300;
   }
 }
