--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,6 @@
     scrollbar-width: none; 
   }
   body {
-    @apply bg-background text-foreground transition-colors duration-300;
+    @apply bg-background text-foreground;
   }
 }
