shadow-sm in landing page, 1st line

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,10 @@
   .fade-in {
     animation: fadeIn ease 500ms;
   }
+  .translate{
+    animation: fadeIn ease-in-out 700ms;
+  }
+  
   
   @keyframes fadeIn {
     0% { opacity: 0; }
